--- a/server/views/main.ejs
+++ b/server/views/main.ejs
@@ -9,7 +9,7 @@
         <div class="row gallery">
 <%_             }                                               %>
             <div class="col-xl-4">
-                <a href="/products/details/<%=product._id%>">
+                <a class="product-link" href="/products/details/<%=product._id%>">
                 <img class="rounded mx-auto w-25" src="<%=product.image_uri%>">
                 <p class="my-1"><%=product.name%></p>
                 </a>
