--- a/server/views/login_page.ejs
+++ b/server/views/login_page.ejs
@@ -12,7 +12,7 @@
             <input type="password" id="inputPassword" class="formcontrol" placeholder="Password" required>
             <div id="passwordAlert"></div>
         </div>
-        <button class="btn btn-lg btn-primary btn-block mt-3" type="submit">Sign in</button>
+        <button class="btn btn-lg btn-primary btn-block mt-3" type="submit">Continue</button>
         <div id="msg">
         </div>
     </form>
