--- a/server/views/signup_page.ejs
+++ b/server/views/signup_page.ejs
@@ -1,7 +1,7 @@
 <%- include("partials/header.ejs");                            _%>
 
     <form id="userportal" class="form-user">
-        <h1 class="h3 mb-3 font-weight-normal text-center">Create account</h1>
+        <h1 class="h3 mb-3 font-weight-normal text-center">Create Account</h1>
         <div class="mb-3">
             <label for="inputUsername">Username</label>
             <input type="text" id="inputUsername" class="formcontrol" placeholder="Username" required autofocus>
@@ -24,7 +24,7 @@
         <input type="password" id="confirmPassword" class="formcontrol" placeholder="Confirm password" required>
             <div id="confirmAlert"></div>
         </div>
-        <button class="btn btn-lg btn-primary btn-block mt-3" type="submit">Sign in</button>
+        <button class="btn btn-lg btn-primary btn-block mt-3" type="submit">Register</button>
         <div id="msg">
         </div>
     </form>
