--- a/server/public/css/main.css
+++ b/server/public/css/main.css
@@ -1,21 +1,14 @@
 main {
   padding: 1rem; }
 
-.gallery:first-child {
-  border-top: 1px solid #CCC; }
+.card img {
+  height: auto;
+  width: 100%;
+  display: block; }
 
-.col-xl-4 {
-  padding: 2rem;
-  border-left: 1px solid #CCC;
-  border-bottom: 1px solid #CCC; }
-
-.col-xl-4:last-child {
-  border-right: 1px solid #CCC;
-  padding-right: 2px; }
-
-a.product-link {
+.card-body a {
   font-weight: bold;
-  color: black !important;
+  color: #333333 !important;
   text-decoration: none !important; }
 
 li.active {
@@ -31,5 +24,15 @@ li.active {
   width: 100%; }
 .form-user button {
   width: 100%; }
+
+.sidebar {
+  position: fixed;
+  top: 57px;
+  bottom: 0;
+  right: 0;
+  overflow-x: hidden;
+  overflow-y: auto;
+  /* Scrollable contents if viewport is shorter than content. */
+  background-color: #EEEEEE; }
 
 /*# sourceMappingURL=main.css.map */
