--- a/server/public/css/main.css
+++ b/server/public/css/main.css
@@ -14,25 +14,42 @@ main {
 li.active {
   font-weight: bold; }
 
+ul.mr-auto {
+  margin-right: auto;
+  margin-left: 0.5em; }
+
+ul.user {
+  margin-right: 0.5em; }
+
 .form-user {
   width: 100%;
   max-width: 330px;
   padding: 15px;
-  margin: 0 auto; }
+  margin: 0 auto;
+  margin-top: 10vh; }
+  .form-user h1 {
+    margin-bottom: 5vh; }
+  .form-user div input {
+    width: 100%; }
+  .form-user button {
+    width: 100%; }
 
-.form-user div input {
-  width: 100%; }
-.form-user button {
-  width: 100%; }
-
-.sidebar {
+.left-sidebar, .right-sidebar {
   position: fixed;
   top: 57px;
   bottom: 0;
-  right: 0;
   overflow-x: hidden;
   overflow-y: auto;
   /* Scrollable contents if viewport is shorter than content. */
   background-color: #EEEEEE; }
+
+.right-sidebar {
+  right: 0; }
+
+.left-sidebar {
+  left: 0; }
+
+main.col-md-10 {
+  margin: auto; }
 
 /*# sourceMappingURL=main.css.map */
