--- a/server/views/main.ejs
+++ b/server/views/main.ejs
@@ -3,6 +3,8 @@
     <div class="container">
     <div class="row">
 
+<%- include("partials/filterpanel.ejs");                           _%>
+
     <main class="col-md-10">
         <div class="row">
 <%      if (products) {                                        _%>
