--- a/server/views/partials/sidebar.ejs
+++ b/server/views/partials/sidebar.ejs
@@ -1,4 +1,4 @@
-    <nav class="col-md-2 sidebar d-none d-md-block">
+    <nav class="col-md-2 right-sidebar d-none d-md-block">
         <ul class="flex-column">
             <li class="nav-item">test</li>
         </ul>
