--- a/server/views/signup_page.ejs
+++ b/server/views/signup_page.ejs
@@ -1,7 +1,7 @@
 <%- include("partials/header.ejs");                            _%>
 
     <form id="userportal" class="form-user">
-        <h1 class="h3 mb-3 font-weight-normal text-center">Create Account</h1>
+        <h1 class="h3 font-weight-normal text-center">Create Account</h1>
         <div class="mb-3">
             <label for="inputUsername">Username</label>
             <input type="text" id="inputUsername" class="formcontrol" placeholder="Username" required autofocus>
