--- a/server/public/css/main.css
+++ b/server/public/css/main.css
@@ -55,7 +55,6 @@ ul.flex-column li {
   bottom: 0;
   overflow-x: hidden;
   overflow-y: auto;
-  /* Scrollable contents if viewport is shorter than content. */
   background-color: #EEEEEE; }
 
 .right-sidebar {
@@ -66,5 +65,11 @@ ul.flex-column li {
 
 main.col-md-9 {
   margin: auto; }
+
+#navigation {
+  text-align: center; }
+  #navigation a {
+    margin-left: 1em;
+    margin-right: 1em; }
 
 /*# sourceMappingURL=main.css.map */
