--- a/server/scss/main.scss
+++ b/server/scss/main.scss
@@ -21,6 +21,10 @@ main {
     }
 }
 
+.productname {
+    font-weight: bold;
+}
+
 li.active {
     font-weight: bold;
 }
@@ -102,4 +106,18 @@ main.col-md-9 {
         margin-left: 1em;
         margin-right: 1em;
     }
+}
+
+#rowgallery {
+    overflow-x: scroll;
+    .card {
+        min-width: 300px;
+        min-height: 300px;
+        margin: 1em;
+    }
+}
+
+#rowgallery_banner {
+    margin: 1em;
+    text-align: center;
 }
