--- a/server/views/partials/nav.ejs
+++ b/server/views/partials/nav.ejs
@@ -1,4 +1,9 @@
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4 sticky-top">
+    <nav class="navbar py-3 navbar-expand-md navbar-dark bg-dark mb-4 sticky-top">
+        <div class="navbar-brand" href="#">
+            <img src="/public/images/logo.png" width="30"
+                 height="30" class="d-inline-block align-top">
+                 Laptop Supply
+        </div>
         <ul class="navbar-nav mr-auto">
             <li class="nav-item <% if(req.url=="/products") {%> active <% } %>">
                 <a class="nav-link" href="/">Home</a>
