--- a/server/views/partials/sidebar.ejs
+++ b/server/views/partials/sidebar.ejs
@@ -3,8 +3,12 @@
             <h4>Favorites</h4>
 <%          for (let product of favorites) {                    %>
             <li>
+                <span>
                 <button id="<%= product._id %>">🗑️</button>
-                <a href="/products/details/<%= product._id %>"><%= product.name %></a>
+                <a href="/products/details/<%= product._id %>">
+                    <%= product.name %>
+                </a>
+                </span>
             </li>
 <%          }                                                   %>
         </ul>
