--- a/server/views/signup_page.ejs
+++ b/server/views/signup_page.ejs
@@ -25,7 +25,7 @@
             <div id="confirmAlert"></div>
         </div>
         <button class="btn btn-lg btn-primary btn-block mt-3" type="submit">Register</button>
-        <div id="msg">
+        <div id="msg" class="text-center py-3">
         </div>
     </form>
     <script src="/public/js/signup.js"></script>
