--- a/server/scss/main.scss
+++ b/server/scss/main.scss
@@ -1,8 +1,19 @@
 $dark-link: #333333;
 $sidebar: #EEEEEE;
 
+body {
+    padding-bottom: 1rem;
+}
+
 main {
     padding: 1rem;
+}
+
+.navbar-brand {
+    margin-left: 0.5em;
+    img {
+        margin-right:0.25em;
+    }
 }
 
 .card {
@@ -10,6 +21,11 @@ main {
         height: auto;
         width: 100%;
         display: block;
+    }
+    .card-body > a > p {
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
     }
 }
 
@@ -51,8 +67,15 @@ ul.flex-column {
         list-style-type: none;
         margin-left: -2em;
         margin-bottom: 0.5em;
-        a {
-            text-decoration: none !important;
+        span {
+            a {
+                text-decoration: none !important;
+            }
+            display: inline-block;
+            width: 100%;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
         }
         button {
             border: 1px solid $sidebar;
@@ -81,7 +104,7 @@ ul.flex-column {
 
 .left-sidebar, .right-sidebar {
     position: fixed;
-    top: 57px;
+    top: 71px;
     bottom: 0;
     overflow-x: hidden;
     overflow-y: auto;           // Scrollable contents if viewport is shorter than content.
