--- a/server/views/login_page.ejs
+++ b/server/views/login_page.ejs
@@ -13,7 +13,7 @@
             <div id="passwordAlert"></div>
         </div>
         <button class="btn btn-lg btn-primary btn-block mt-3" type="submit">Continue</button>
-        <div id="msg">
+        <div id="msg" class="text-center py-3">
         </div>
     </form>
     <script src="/public/js/login.js"></script>
