--- a/server/scss/main.scss
+++ b/server/scss/main.scss
@@ -21,6 +21,7 @@ main {
         height: auto;
         width: 100%;
         display: block;
+        padding: 1em 1em 0em 1em;
     }
     .card-body > a > p {
         white-space: nowrap;
