--- a/server/views/partials/filterpanel.ejs
+++ b/server/views/partials/filterpanel.ejs
@@ -33,7 +33,7 @@
                 </li>
 <%              });                                             %>
 
-                <button id="filter">Filter</button>
+                <button class="btn btn-secondary" id="filter">Filter</button>
             </ul>
         </form>
     </nav>
