--- a/server/views/partials/sidebar.ejs
+++ b/server/views/partials/sidebar.ejs
@@ -4,10 +4,10 @@
 <%          for (let product of favorites) {                    %>
             <li>
                 <span>
-                <button id="<%= product._id %>">🗑️</button>
-                <a href="/products/details/<%= product._id %>">
-                    <%= product.name %>
-                </a>
+                    <button id="<%= product._id %>">🗑️️</button>
+                    <a href="/products/details/<%= product._id %>">
+                        <%= product.name %>
+                    </a>
                 </span>
             </li>
 <%          }                                                   %>
