--- a/server/scss/main.scss
+++ b/server/scss/main.scss
@@ -1,19 +1,17 @@
 $dark-link: #333333;
 $sidebar: #EEEEEE;
 
-body {
-    padding-bottom: 1rem;
-}
+/*** Shared ***/
 
 main {
     padding: 1rem;
 }
 
-.navbar-brand {
-    margin-left: 0.5em;
-    img {
-        margin-right:0.25em;
-    }
+/*** Homepage (main.ejs) ***/
+
+main.col-md-9 {
+    margin: auto;
+    width: 85%;
 }
 
 .card {
@@ -38,11 +36,24 @@ main {
     }
 }
 
-.productname {
-    font-weight: bold;
+#navigation {
+    text-align: center;
+    a {
+        margin-left: 1em;
+        margin-right: 1em;
+    }
 }
 
-li.active {
+/*** navbar (partials/nav.ejs) ***/
+
+.navbar-brand {
+    margin-left: 0.5em;
+    img {
+        margin-right:0.25em;
+    }
+}
+
+li.active, .productname {
     font-weight: bold;
 }
 
@@ -54,6 +65,8 @@ ul.mr-auto {
 ul.user {
     margin-right: 0.5em;
 }
+
+/*** Filter Panel and Favorites List (left and right sidebars) ***/
 
 ul.flex-column {
     h4 {
@@ -84,6 +97,27 @@ ul.flex-column {
     }
 }
 
+@mixin sidebar {
+    position: fixed;
+    top: 71px;
+    bottom: 0;
+    overflow-x: hidden;
+    overflow-y: auto;           // Scrollable contents if viewport is shorter than content.
+    background-color: $sidebar;
+}
+
+.right-sidebar {
+    @include sidebar;
+    right: 0;
+}
+
+.left-sidebar {
+    @include sidebar;
+    left: 0;
+}
+
+/*** Signup and Login (signup_page.ejs and login_page.ejs) ***/
+
 .form-user {
     width: 100%;
     max-width: 330px;
@@ -103,34 +137,7 @@ ul.flex-column {
     }
 }
 
-.left-sidebar, .right-sidebar {
-    position: fixed;
-    top: 71px;
-    bottom: 0;
-    overflow-x: hidden;
-    overflow-y: auto;           // Scrollable contents if viewport is shorter than content.
-    background-color: $sidebar;
-}
-
-.right-sidebar {
-    right: 0;
-}
-
-.left-sidebar {
-    left: 0;
-}
-
-main.col-md-9 {
-    margin: auto;
-}
-
-#navigation {
-    text-align: center;
-    a {
-        margin-left: 1em;
-        margin-right: 1em;
-    }
-}
+/*** Product Page (product_page.ejs) ***/
 
 #rowgallery {
     overflow-x: scroll;
