--- a/server/views/admin_page.ejs
+++ b/server/views/admin_page.ejs
@@ -2,12 +2,18 @@
 <%- include("partials/nav.ejs");                               _%>
     <div class="container">
         <div class="row">
-        <% for (let user of users) { %>
+<%      for (let user of users) {                               %>
             <div class="col-lg-3 bg-light m-2">
-            <%= user.username %> favorites:
+            Username: <%= user.username %> <br>
+            Email: <%= user.email %> <br>
+            Favorites:
             <ul>
-            <% for (let item of user.favorites) { %>
-                <li><%= item.name %></li>
+<%          for (let item of user.favorites) {                  %>
+                <li>
+                    Item: <%= item.name %><br>
+                    Quantity in Stock: <%= item.quantity %><br>
+                </li>
+                <br>
             <% } %>
             </ul>
             </div>
